<resources>
    <string name="app_name">US Stock Scanner</string>
    <string name="scan_button">Scan</string>
    <string name="ticker_title">Ticker</string>
    <string name="text_header_ticker">Ticker</string>
    <string name="text_header_price">Price</string>
    <string name="text_header_change">%Change</string>
    <string name="text_header_volume">Volume</string>
    <string name="title_activity_chart">Chart</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="chartFragment_label">Chart</string>
    <string name="scanFragment_label">Top Gainers</string>
    <string name="about_text">
        This is US Stock Scanner.
        \nIt shows top %percent gainers
        \nand top %percent losers.
        \nParameters for being on a list:
        \n*Previous day close price>1$
        \n*Current price>1$
        \n*Day Volume>20k
        \n*Market Cap>200mln$ </string>
    <string name="AboutAppTitle">About</string>
    <string name="fragment_about_app_title">About</string>
    <string name="admob_application_id">ca-app-pub-8860146573198389~5769799520</string>
    <string name="admob_application_block">ca-app-pub-8860146573198389/7426512034</string>
    <string name="admob_application_block_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="gainers_button">Gainers</string>
    <string name="losers_button">Losers</string>
    <string name="token_production">pk_e6835a488d48412481f561bbe124cb2a</string>
    <string name="token_test">Tpk_247ae2498629453786fcc3729f768212</string>
    <string name="base_url_production">https://cloud.iexapis.com</string>
    <string name="base_url_test">https://sandbox.iexapis.com</string>
</resources>
