<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/scanFragment">

    <fragment
        android:id="@+id/scanFragment"
        android:name="com.doitnowcompany.usstockscanner.ui.scan.ScanFragment"
        android:label="@string/scanFragment_label"
        tools:layout="@layout/fragment_scan">
        <action
            android:id="@+id/action_scanFragment_to_chartFragment"
            app:destination="@id/chartFragment" />
    </fragment>
    <fragment
        android:id="@+id/chartFragment"
        android:name="com.doitnowcompany.usstockscanner.ui.chart.ChartFragment"
        android:label="@string/chartFragment_label"
        tools:layout="@layout/fragment_chart">
        <argument
            android:name="selectedTicker"
            app:argType="com.doitnowcompany.usstockscanner.db.entity.TickerEntity" />
    </fragment>
    <fragment
        android:id="@+id/aboutAppFragment"
        android:name="com.doitnowcompany.usstockscanner.ui.about.AboutAppFragment"
        android:label="@string/fragment_about_app_title"
        tools:layout="@layout/fragment_about_app" />
</navigation>